# scons-swift

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SConstruct  requirements.txt
examples/SwiftLibrary/: SCsub  calculator.swift  point.swift
examples/cpp_calls_swift/: CMakeLists.txt  README.md  SCsub  benchmark.cpp  main.cpp  swift_library.swift
examples/cpp_library/: SCsub
examples/swift_calls_cpp/: README.md  SCsub  benchmark.swift  cpp_library.cpp  cpp_library.h  main.swift  module.modulemap
examples/swift_calls_swift/: SCsub  main.swift
sconscontrib/SCons/Tool/swift/: __init__.py  swift.py
utils/: scons_hints.py
